--- a/tweeter-server/package.json
+++ b/tweeter-server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "npm run compile",
     "compile": "npm run clean && tsc",
-    "clean": "rm -rf dist"
+    "clean": "rimraf dist"
   },
   "keywords": [],
   "author": "",
