--- a/tweeter-server/package.json
+++ b/tweeter-server/package.json
@@ -12,7 +12,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.777.0",
     "@aws-sdk/client-s3": "^3.777.0",
+    "@aws-sdk/lib-dynamodb": "^3.778.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.2",
     "date-fns": "^3.3.1",
     "tweeter-shared": "file:../tweeter-shared",
     "uuid": "^9.0.1"
